# pi-forall

full/test/: Hw2.pi  Lec3.pi  Lec4.pi
version1/: pi-forall.cabal  stack.yaml
version1/main/: Main.hs
version1/src/: Environment.hs  Equal.hs  LayoutToken.hs  Modules.hs  Parser.hs  PrettyPrint.hs  Syntax.hs  TypeCheck.hs
version1/test/: Hw1.pi  Lec1.pi
version2/main/: Main.hs
version2/src/: Environment.hs  Equal.hs  LayoutToken.hs  Modules.hs  PrettyPrint.hs  Syntax.hs  TypeCheck.hs
version2/test/: Hw1.pi  Hw2.pi  Lec1.pi  Lec2.pi  NatChurch.pi
