name: pi-forall
version: 0.1.1
license: BSD3
license-file: LICENSE
copyright: (c) 2013-2016 University of Pennsylvania
description: An implementation of a simple dependently typed language for OPLSS 2013
author: Stephanie Weirich <sweirich@cis.upenn.edu>, based on code by Trellys Team <trellys@...>
maintainer: Stephanie Weirich <sweirich@cis.upenn.edu>
cabal-version: >= 1.8
build-type: Simple
tested-with: GHC == 7.8.4, GHC == 7.10.3, GHC == 8.0.1
category: Compilers/Interpreters
homepage: https://github.com/sweirich/pi-forall
synopsis: Demo implementation of typechecker for dependently-typed language

library
  hs-source-dirs: src/
  exposed-modules:
                   Environment
                   Equal
                   LayoutToken
                   Modules
                   Parser
                   PrettyPrint
                   Syntax
                   TypeCheck
  build-depends:  base >= 4 && < 5
               ,  parsec >= 3.1.8 && < 3.2
               ,  mtl >= 2.2.1
               ,  pretty >= 1.0.1.0
               ,  unbound-generics >= 0.2
               ,  transformers
               ,  array >= 0.3.0.2 && < 0.6
               ,  containers
               ,  directory
               ,  filepath
               ,  HUnit
               ,  QuickCheck
  ghc-options:  -Wall -fwarn-tabs

executable pi-forall
  hs-source-dirs: main/
  main-is: Main.hs
  build-depends: base >=4 && < 5
               , pi-forall
               , parsec >= 3.1.8 && < 3.2
               , mtl >= 2.2.1
               , pretty >= 1.0.1.0
               , filepath
  ghc-options:  -Wall -fwarn-tabs
